--- a/bulma.sass
+++ b/bulma.sass
@@ -1,5 +1,7 @@
 @charset "utf-8"
 /*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
+@import "sass/custom/_all"
+
 @import "sass/utilities/_all"
 @import "sass/base/_all"
 @import "sass/elements/_all"
@@ -8,3 +10,9 @@
 @import "sass/grid/_all"
 @import "sass/helpers/_all"
 @import "sass/layout/_all"
+
+
+
+
+
+
